# DF

./: .gitignore  CLAUDE.md  Grafana_Frontend_Architecture_Analysis.md  Grafana_Theme_Implementation_Analysis.md  JupyterLab_Theming_System_Analysis.md  LOCAL_FIRST_GUIDELINES.md  OSDU_Checkshot_Ingestion_Analysis.md  OSDU_LAS_Curve_Ingestion_Analysis.md  OSDU_Major_Data_Types_Overview.md  OSDU_Surface_Ingestion_Analysis.md  OSDU_Trajectory_Analysis.md  OSDU_WellDelivery_Planning_Ingestion_Analysis.md  OSDU_WellExecution_Ingestion_Analysis.md  OSDU_WellTops_Markers_Analysis.md  Principal_Engineer_Critical_Evaluation_Checklist.md  QGIS_Project_Session_Persistence_Analysis.md  README.md  VSCode_Theme_Switching_Architecture_Analysis.md  WellLogs_jl_Architecture_Analysis.md  Wellioviz_Architecture_Analysis.md
DataForge/: .gitignore  CLAUDE.md  Cargo.toml  MVP_IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
DataForge-Parser/: README.md  pyproject.toml
DataForge-Parser/docs/: MVP.md
DataForge-Parser/src/dataforge_parser/: __init__.py  cli.py  pipeline.py
DataForge-Parser/src/dataforge_parser/extractors/: __init__.py  casing.py  formations.py  surveys.py  well_header.py
DataForge-Parser/src/dataforge_parser/mappers/: __init__.py  osdu_mapper.py
DataForge-Parser/src/dataforge_parser/parsers/: __init__.py  docling_parser.py
DataForge-Parser/src/dataforge_parser/storage/: __init__.py  sqlite_writer.py
DataForge-Parser/src/dataforge_parser/validators/: __init__.py  schema_validator.py
DataForge-Parser/tests/: __init__.py  test_extractors.py
DataForge/.claude/: settings.local.json
DataForge/DataForge/: package.json
DataForge/DataForge/src-tauri/: Cargo.toml  tauri.conf.json
DataForge/DataForge/src-tauri/src/: main.rs
DataForge/crates/dataforge-core/: Cargo.toml
DataForge/crates/dataforge-core/migrations/: V1__baseline_schema.sql  V2__add_conflict_strategy.sql  V3__curves_dual_storage.sql  V4__curves_quality_fields.sql  V5__curve_properties_osdu.sql  V6__markers_well_name.sql  V7__schema_version_columns.sql  V8__osdu_schema_alignment.sql
DataForge/crates/dataforge-core/src/: auth.rs  blob.rs  db.rs  error.rs  ingest.rs  las.rs  lib.rs  models.rs  parquet.rs  unified_view.rs  units.rs  wellgrid.rs
DataForge/crates/dataforge-core/src/checkshots/: detection.rs  ingest.rs  mod.rs  parser.rs
DataForge/crates/dataforge-core/src/markers/: detection.rs  ingest.rs  mod.rs  parser.rs
DataForge/crates/dataforge-core/src/surfaces/: detection.rs  ingest.rs  mod.rs  parser.rs
DataForge/crates/dataforge-core/src/sync/: mod.rs  repository.rs  traits.rs
DataForge/crates/dataforge-core/src/trajectory/: calculation.rs  detection.rs  ingest.rs  mod.rs  parser.rs
DataForge/crates/dataforge-storage/: Cargo.toml
DataForge/crates/dataforge-storage/src/: config.rs  error.rs  factory.rs  lib.rs  service.rs
DataForge/crates/dataforge-storage/src/backend/: filesystem.rs  memory.rs  mod.rs  s3.rs
DataForge/crates/dataforge-sync/: Cargo.toml
DataForge/crates/dataforge-sync/src/: auth.rs  client.rs  lib.rs  protocol.rs  storage.rs
DataForge/crates/dataforge-sync/src/server/: db.rs  handlers.rs  mod.rs  state.rs
DataForge/crates/las-parser/: Cargo.toml  README.md
DataForge/crates/las-parser/notebooks/: lasLoad.ipynb
DataForge/crates/las-parser/src/: las_parser.rs  lib.rs
DataForge/crates/las-parser/standards/LAS12/: LAS12.md  LAS12_meta.json
DataForge/crates/las-parser/standards/LAS_20_Update_Jan2014/: LAS_20_Update_Jan2014.md  LAS_20_Update_Jan2014_meta.json
DataForge/crates/las-parser/standards/LAS_3_File_Structure/: LAS_3_File_Structure.md  LAS_3_File_Structure_meta.json
DataForge/crates/las-parser/standards/las_20_updated_july2009/: las_20_updated_july2009.md  las_20_updated_july2009_meta.json
DataForge/crates/las-parser/tests/: test_curve_detection.rs  test_curve_mapping_ops.rs  test_las_parser.rs  test_real_file.md  test_real_file.rs
DataForge/crates/las-parser/tests/test_output/: 6038187_v1_2_short_curve_metadata.csv  6038187_v1_2_short_data.parquet  6038187_v1_2_short_header.csv  6038187_v1_2_short_metadata.json  6038187_v1_2_short_parquet_friendly.csv  embeddings.json
DataForge/crates/las-types/: Cargo.toml  README.md
DataForge/crates/las-types/src/: curve_mapping_ops.rs  las_file.rs  lib.rs  petrophysics_schema.rs
DataForge/crates/las-types/src/sections/: curve.rs  mod.rs  parameter.rs  version.rs  well.rs
DataForge/crates/unit-conversions/: Cargo.toml
DataForge/crates/unit-conversions/src/: lib.rs
DataForge/docker/: .env.example  Dockerfile.sync-server  docker-compose.prod.yml  docker-compose.yml
DataForge/docs/: Principal_Engineer_Evaluation_Checklist.md
DataForge/docs/context7/scichart-js/: scichart-js-basic-line-chart.md
DataForge/docs/decisions/: 0000-adr-template.md  0001-git-like-sync-model.md  0002-content-addressed-blob-storage.md  0003-dual-native-gridded-storage.md  0004-url-path-api-versioning.md  0005-utoipa-openapi-generation.md  0006-refinery-sqlite-migrations.md
DataForge/markdown-guides/DataForge/design-concepts/DF-Compute/: DFC-chart-implementation.md
DataForge/scripts/: create-db.rs  open-db.sh
DataForge/src/: app.css  app.html
DataForge/src-tauri/: Cargo.toml  tauri.conf.json
DataForge/src-tauri/capabilities/: default.json
DataForge/src-tauri/src/: checkshot_commands.rs  commands.rs  ingest_commands.rs  lib.rs  main.rs  marker_commands.rs  state.rs  surface_commands.rs  sync_commands.rs  trajectory_commands.rs
DataForge/src/lib/: index.ts
DataForge/src/lib/hooks/: index.ts
DataForge/src/lib/stores/: auth.svelte.ts  index.ts  ingest.svelte.ts  members.svelte.ts  sync.svelte.ts  theme.svelte.ts
DataForge/src/lib/styles/: constants.ts
DataForge/src/lib/types/: auth.ts  checkshots.ts  index.ts  ingest.ts  markers.ts  surfaces.ts  sync.ts  trajectory.ts
DataForge/src/lib/utils/: clipboard-parser.ts  paste-validator.ts
DataForge/src/routes/: +layout.svelte  +layout.ts
DataForge/src/routes/(app)/: +layout.svelte  +page.svelte
(+9516 files in other folders)
