[workspace]
resolver = "2"
members = [
    "crates/*",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/scrooijmans/DataForge"

[workspace.dependencies]
# =============================================================================
# LAS PROCESSING CRATES
# =============================================================================
las-parser = { path = "crates/las-parser" }
las-types = { path = "crates/las-types" }
unit-conversions = { path = "crates/unit-conversions" }

# =============================================================================
# INTERNAL CRATES
# =============================================================================
dataforge-core = { path = "crates/dataforge-core" }
dataforge-sync = { path = "crates/dataforge-sync" }
dataforge-storage = { path = "crates/dataforge-storage" }

# =============================================================================
# REGEX / TEXT PROCESSING
# =============================================================================
regex = "1.10"
lazy_static = "1.5"

# =============================================================================
# DATABASE
# =============================================================================
rusqlite = { version = "0.31", features = ["bundled", "blob", "backup"] }
duckdb = { version = "1.0", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# =============================================================================
# PARQUET / ARROW
# =============================================================================
arrow = { version = "56.2.0", features = ["prettyprint"] }
parquet = { version = "56.2.0", features = ["snap", "zstd"] }

# =============================================================================
# SERIALIZATION
# =============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# =============================================================================
# WEB / API
# =============================================================================
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# =============================================================================
# AUTHENTICATION
# =============================================================================
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

# =============================================================================
# STORAGE
# =============================================================================
opendal = { version = "0.50", features = ["services-s3", "services-fs"] }
sha2 = "0.10"
hex = "0.4"

# =============================================================================
# ASYNC
# =============================================================================
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# =============================================================================
# ERROR HANDLING
# =============================================================================
thiserror = "1.0"
anyhow = "1.0"

# =============================================================================
# LOGGING / TRACING
# =============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# =============================================================================
# UTILITIES
# =============================================================================
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1"
tempfile = "3"

# =============================================================================
# TAURI
# =============================================================================
tauri = { version = "2", features = ["devtools"] }
tauri-build = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
strip = true
