[package]
name = "dataforge-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DataForge Desktop Application"

[lib]
name = "dataforge_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "dataforge-app"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Tauri
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-clipboard-manager.workspace = true

# Internal crates
dataforge-core.workspace = true
dataforge-sync.workspace = true
dataforge-storage.workspace = true

# Database
rusqlite.workspace = true
duckdb.workspace = true

# Reused from MudRock
las-parser.workspace = true
las-types.workspace = true
unit-conversions.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
