[package]
name = "dataforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data types and business logic for DataForge"

[dependencies]
# Reused from MudRock
las-parser.workspace = true
las-types.workspace = true
unit-conversions.workspace = true

# Database
rusqlite.workspace = true
duckdb.workspace = true

# Parquet/Arrow
arrow.workspace = true
parquet.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Storage
sha2.workspace = true
hex.workspace = true

# Authentication
argon2.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
